third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_unpack_assign_invalid.exp

Diagnostics:
error: `integer` not compatible with `bool` in name expression
   ┌─ tests/checking/typing/type_variable_join_threaded_unpack_assign_invalid.move:36:9
   │
36 │         f1
   │         ^^
